Fix XSS in markdown HTML rendering, add brakeman
Kramdown passes raw HTML through without sanitization, meaning any
user-editable markdown field (partner description, event description,
article body, etc.) could contain <script> tags that execute for
public visitors.

- Add Rails::HTML5::SafeListSanitizer to HtmlRenderCache before_save
- Replace fragile .to_sentence.html_safe with safe_join in partner view
- Add brakeman gem and config/brakeman.ignore for verified false positives
- Add rake html_cache:sanitize task to re-render existing cached HTML

After deploy, run: bin/rails html_cache:sanitize

--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -49,7 +49,7 @@
 
         <% if @partner.managees.any? %>
           <p class="small"><%= @partner.name %> manage
-          <%= @partner.managees.map { |place| link_to place.name, place }.to_sentence.html_safe %>.
+          <%= safe_join(@partner.managees.map { |place| link_to place.name, place }, ', ') %>.
         <% end %>
       </div>
       <div class="gi gi__2-5">
